_includes/manuals/1.4/7.1_novnc.md
Foreman uses the excellent javascript VNC library [noVNC](https://novnc.com/info.html), which allows clientless VNC within a web browser. When a console is opened by the user's web browser, Foreman opens a connection to TCP Port 5910 (and up) on the hypervisor and redirects that itself.

### Requirements

* Recent web browser
* Open network connection from the workstation where the web browser runs on to your Foreman server and from your Foreman server to the hypervisor on TCP ports 5910 - 5930.

### Known issues

* Currently only unencrypted connections are possible, even if you connect to Foreman via HTTPS.
* Keyboard mappings are currently fixed to English only.
* When using Firefox, if you use Foreman via HTTPS, Firefox might block the connection. To fix it, go to about:config and enable network.websocket.allowInsecureFromHTTPS

### Troubleshooting Steps

* Check for a "websockify.py" process on your Foreman server when opening the console page in Foreman
* If websockify.py is missing, check /var/log/foreman/production.log for stderr output with logging increased to debug
* Look at the last argument of the process command line, it will have the hypervisor hostname and port - ensure you can resolve and ping this hostname
* Try a telnet/netcat connection from the Foreman host to the hypervisor hostname/port
* The penultimate argument of websockify.py is the listening port number, check if your web client host can telnet to it
* If using Firefox, check the known issues above and set the config appropriately
